--- a/config.json
+++ b/config.json
@@ -23,3 +23,4 @@ Temporary commit content 246
 Temporary commit content 260
 Temporary commit content 266
 Temporary commit content 280
+Temporary commit content 282
