--- a/config.json
+++ b/config.json
@@ -7,3 +7,4 @@ Temporary commit content 36
 Temporary commit content 45
 Temporary commit content 53
 Temporary commit content 59
+Temporary commit content 66
