Added validation for user input

--- a/config.json
+++ b/config.json
@@ -10,3 +10,4 @@ Temporary commit content 59
 Temporary commit content 66
 Temporary commit content 87
 Temporary commit content 108
+Temporary commit content 139
