Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ Temporary commit content 185
 Temporary commit content 191
 Temporary commit content 217
 Temporary commit content 236
+Temporary commit content 253
