--- a/config.json
+++ b/config.json
@@ -3,3 +3,4 @@ Temporary commit content 23
 Temporary commit content 27
 Temporary commit content 34
 Temporary commit content 35
+Temporary commit content 36
