--- a/config.json
+++ b/config.json
@@ -6,3 +6,4 @@ Temporary commit content 35
 Temporary commit content 36
 Temporary commit content 45
 Temporary commit content 53
+Temporary commit content 59
