Added initial project plan

--- a/config.json
+++ b/config.json
@@ -13,3 +13,4 @@ Temporary commit content 108
 Temporary commit content 139
 Temporary commit content 143
 Temporary commit content 154
+Temporary commit content 182
